--- a/be/build.gradle
+++ b/be/build.gradle
@@ -32,8 +32,7 @@ dependencies {
 
 	/* Database */
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.h2database:h2'
-	/*runtimeOnly 'com.mysql:mysql-connector-j'*/
+	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	/* jwt */
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
