--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -1,1 +1,24 @@
-
+spring:
+  profiles:
+    include: oauth
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true # 하이버네이트가 DB에 날리는 모든 쿼리(DDL, DML)를 콘솔창에 보여줌
+        format_sql: true # SQL 예쁘게 보기
+    hibernate:
+      ddl-auto: create
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: 6379
+logging:
+  level:
+    org:
+      springframework:
+        security: INFO
