fix : Github Actions workflow file 및 Dockerfile 오류분 수정

--- a/.github/workflows/cicd-be.yml
+++ b/.github/workflows/cicd-be.yml
@@ -20,6 +20,12 @@ jobs:
       - name: checkout Github Action
         uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
       - name: Insert secret data into yml file
         run: |
           sed -i "s|\${DB_URL}|$DB_URL|g" ./src/main/resources/application.yml
@@ -43,6 +49,12 @@ jobs:
           NAVER_CLIENT_SECRET: ${{ secrets.NAVER_CLIENT_SECRET }}
           KAKAO_CLIENT_ID: ${{ secrets.KAKAO_CLIENT_ID }}
           KAKAO_CLIENT_SECRET: ${{ secrets.KAKAO_CLIENT_SECRET }}
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew bootJar
 
       - name: Docker build and push
         run: |
