--- a/.github/workflows/manual-deploy-be.yml
+++ b/.github/workflows/manual-deploy-be.yml
@@ -70,6 +70,5 @@ jobs:
           envs: GITHUB_SHA
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/share-travel:${GITHUB_SHA::7}
-            docker tag ${{ secrets.DOCKER_USERNAME }}/share-travel:${GITHUB_SHA::7} share-travel
             docker stop share-travel-spring-container
-            docker run -d --rm --name share-travel-spring-container -e JWT_SECRET=${{ secrets.JWT_SECRET }} -e TZ=Asia/Seoul -p 8080:8080 --net mynet --ip 172.19.0.3 share-travel
+            docker run -d --rm --name share-travel-spring-container -e JWT_SECRET=${{ secrets.JWT_SECRET }} -e TZ=Asia/Seoul -p 8080:8080 --net mynet --ip 172.19.0.3 ${{ secrets.DOCKER_USERNAME }}/share-travel:${GITHUB_SHA::7}
