feat : 애플리케이션 설정 파일 OAuth2 Provider 별 Redirect uri 변경

--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -22,19 +22,18 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri: "http://localhost:3000/login/{registrationId}"
             scope: profile,email
           naver:
             client-id: ${NAVER_CLIENT_ID}
             client-secret: ${NAVER_CLIENT_SECRET}
-            redirect-uri: "http://localhost:3000/login/{registrationId}"
+            redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
             authorization_grant_type: authorization_code
             scope: name,email,profile_image
             client-name: naver
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ${KAKAO_CLIENT_SECRET}
-            redirect-uri: "http://localhost:3000/login/{registrationId}"
+            redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
             authorization-grant-type: authorization_code
             client-authentication-method: client_secret_post
             scope: profile_nickname,profile_image,account_email
