--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -10,11 +10,14 @@ spring:
         show_sql: true # 하이버네이트가 DB에 날리는 모든 쿼리(DDL, DML)를 콘솔창에 보여줌
         format_sql: true # SQL 예쁘게 보기
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
   data:
     redis:
       host: ${REDIS_HOST}
       port: 6379
+  sql:
+    init:
+      mode: always
   security:
     oauth2:
       client:
