--- a/be/build.gradle
+++ b/be/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.0'
 
 	/* Tool */
 	compileOnly 'org.projectlombok:lombok'
