--- a/be/build.gradle
+++ b/be/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	/* Database */
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.hibernate:hibernate-spatial'
 
 	/* jwt */
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
