chore : AWS S3 파일 업로드 위한 애플리케이션 설정 작업

--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -64,6 +64,22 @@ spring:
           starttls:
             enable: true
           auth: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${S3_ACCESSKEY}
+      secret-key: ${S3_SECRETKEY}
+    region:
+      static: ${S3_REGION}
+    s3:
+      bucket: ${S3_BUCKET}
+    stack:
+      auto: false
 
 logging:
   level:
