fix : build.gradle 주석 해제

--- a/be/build.gradle
+++ b/be/build.gradle
@@ -44,6 +44,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
-//tasks.named('test') {
-//	useJUnitPlatform()
-//}
+tasks.named('test') {
+	useJUnitPlatform()
+}
