feat : 여행지 등록 및 조회 API 기능 구현 및 개선

--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
         format_sql: true # SQL 예쁘게 보기
     hibernate:
       ddl-auto: none
+    database: mysql
+    database-platform: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
   data:
     redis:
       host: ${REDIS_HOST}
