--- a/be/build.gradle
+++ b/be/build.gradle
@@ -31,9 +31,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	/* aws s3 */
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 	/* Database */
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '6.1.7.Final'
 
 	/* jwt */
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
