hotfix : fe cicd 오탈자 수정

--- a/.github/workflows/cicd-fe.yml
+++ b/.github/workflows/cicd-fe.yml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: startsWith(github.head_ref, 'fe')
+    if: startsWith(github.head_ref, 'fe/')
     defaults:
       run:
         shell: bash
