--- a/.github/workflows/manual-deploy-fe.yml
+++ b/.github/workflows/manual-deploy-fe.yml
@@ -12,7 +12,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./be
+        working-directory: ./fe
 
     strategy:
       matrix:
