--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
   sql:
     init:
       mode: always
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
   security:
     oauth2:
       client:
