fix : frontend cicd workflow 에러 디버깅 위한 코드 작성

--- a/.github/workflows/manual-deploy-fe.yml
+++ b/.github/workflows/manual-deploy-fe.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build project
         run: |
           npm run build --if-present
+          pwd
+          ls -al
+          ls build
 
       - name: init build outputs at AWS EC2
         uses: appleboy/ssh-action@master
