--- a/be/build.gradle
+++ b/be/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.0'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '3.0.6'
 
 	/* Tool */
 	compileOnly 'org.projectlombok:lombok'
