fix : 환경변수 값 수정

--- a/fe/.env.production
+++ b/fe/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_API_URL=https://share-travel.com/
+VUE_APP_API_URL=http://localhost/
 VUE_APP_KAKAOMAP_APP_KEY=8251b94507e0a714944bc5c4b57944d3
