fix : cicd event trigger 수정

--- a/.github/workflows/cicd-be.yml
+++ b/.github/workflows/cicd-be.yml
@@ -9,8 +9,8 @@ permissions:
 
 jobs:
   build:
+    if: startsWith(github.head_ref, 'be/') && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    if: startsWith(github.head_ref, 'be')
     defaults:
       run:
         shell: bash
